--- a/static/configuration.json
+++ b/static/configuration.json
@@ -1,14 +1,1 @@
-{
-    "githubUsername": "GamerJie",
-    "blogTitle": "GamerJie",
-    "blogDescribe": "Test Blog",
-    "htmlTitle": "test blog",
-    "fontColor": "#ffffff",
-    "useBackgroundImage": false,
-    "backgroundColorLeft": "#2690F9",
-    "backgroundColorRight": "#FC2D2D",
-    "audioUrl": "http://sc1.111ttt.cn:8282/2018/1/03m/13/396131232171.m4a?tflag=1519095601&pin=6cd414115fdb9a950d827487b16b5f97#.mp3",
-    "mini": false,
-    "webSites":[
-    ]
-}
+{"githubUsername":"GamerJie","blogTitle":"GamerJie","blogDescribe":"Test Blog","htmlTitle":"test blog","fontColor":"#ffffff","useBackgroundImage":false,"backgroundColorLeft":"#A7A7A7","backgroundColorRight":"#A7A7A7","audioUrl":"","mini":true,"webSites":[]}
